# zk-aptos-examples

./: .gitignore  README.md
bulletproofs-cli/: Cargo.toml  proof.json
bulletproofs-cli/src/: main.rs
circuits/MulCircuit/: Cargo.toml
circuits/MulCircuit/artifacts/bls12_381/: proof.json  verification_key.json
circuits/MulCircuit/src/: main.rs
circuits/Multiplier/: proof_bls.json  proof_bn.json  verification_key_bls.json  verification_key_bn.json
circuits/cubic-gnark/: go.mod  go.sum  proof.json  proof_gnark.json  verification_key.json  verification_key_gnark.json
examples/bp_demo/: Move.toml
examples/bp_demo/sources/: bp_demo.move
examples/bp_demo/tests/: bp_demo_tests.move
examples/verifier_example/: Move.toml
examples/verifier_example/sources/: verifier_example.move
verifier-contracts/: README.md
verifier-contracts/ark_mimc_bls12381/: README.md
verifier-contracts/ark_mimc_bls12381/sources/: verifier.move
verifier-contracts/ark_mimc_bls12381/tests/: verifier_tests.move
verifier-contracts/ark_mimc_bn254/: README.md
verifier-contracts/ark_mimc_bn254/sources/: verifier.move
verifier-contracts/ark_mimc_bn254/tests/: verifier_tests.move
verifier-contracts/cubic_gnark_bin_bls12381/: README.md
verifier-contracts/cubic_gnark_bls12381/: README.md
verifier-contracts/cubic_gnark_bls12381/sources/: verifier.move
verifier-contracts/cubic_gnark_native_json_bls12381/: README.md
verifier-contracts/mul_circuit_bls12381/: README.md
verifier-contracts/multiplier_bls12381/: Move.toml  README.md
verifier-contracts/multiplier_bn254/: README.md
(+11 files in other folders)
