[package]
name = "bulletproofs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bulletproofs = { version = "4.0.0", features = ["std"] }
clap = { version = "4.5.20", features = ["derive"] }
curve25519-dalek-ng = "4.1.1"
hex = "0.4.3"
merlin = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
