[package]
name = "MulCircuit"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.6.0"
ark-ff = "0.6.0"
ark-groth16 = "0.6.0"
ark-r1cs-std = "0.6.0"
ark-relations = "0.6.0"
ark-serialize = "0.6.0"
ark-snark = "0.6.0"
ark-snarkjs = "0.2.0"
ark-std = "0.6.0"
hex = "0.4.3"
rand = "0.8.5"
